--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 								data-wow-duration=".4s" data-wow-delay=".3s">
 								<span class="icon pe-7s-note2"></span>
 								<span class="key-fact">
-									Data Mining & AUTOMATation
+									Data modeling
 								</span>
 							</div>
 						</div>
@@ -179,7 +179,7 @@
 							with these technologies.</p>
 						<div class="row margin-top-40">
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat">PYTHON</span>
+								<span class="progress-cat">PYTHON, C++</span>
 								<div class="progress-bar-graph">
 									<div class="progress-bar-wrap">
 										<div class="bar-wrap">
@@ -209,14 +209,14 @@
 									<div class="progress-bar-wrap">
 										<div class="bar-wrap">
 											<span data-width="75">
-												<strong><i>75</i>%</strong>
+												<strong><i>80</i>%</strong>
 											</span>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat">Node js & Mongo Db</span>
+								<span class="progress-cat">Node js, Mongo Db</span>
 								<div class="progress-bar-graph">
 									<div class="progress-bar-wrap">
 										<div class="bar-wrap">
@@ -229,7 +229,7 @@
 							</div>
 							<div class="clearfix"></div>
 							<div class="col-sm-5 margin-bottom-sm">
-								<span class="progress-cat">ALGORITHMS & computation</span>
+								<span class="progress-cat">ALGORITHMS</span>
 								<div class="progress-bar-graph">
 									<div class="progress-bar-wrap">
 										<div class="bar-wrap">
@@ -242,12 +242,12 @@
 							</div>
 
 							<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-								<span class="progress-cat">PANDAS</span>
+								<span class="progress-cat">Data mining</span>
 								<div class="progress-bar-graph">
 									<div class="progress-bar-wrap">
 										<div class="bar-wrap">
-											<span data-width="65">
-												<strong><i>65</i>%</strong>
+											<span data-width="70">
+												<strong><i>70</i>%</strong>
 											</span>
 										</div>
 									</div>
@@ -376,15 +376,21 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Aug 2020 — Sept 2020</span></div>
+											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Developer</span>
-												<span class="job-loc">Urbankisaan, Hyd
+												<span class="job-loc liveat"> <span class='liveat'>Urbankisaan
+												</span> , Hyd
 												</span>
 												<p class="job-summary p-small">
-													Pressented at Google Tech Crunch 2020, Developed and android app to recognize ripe tomatoes in a plant, further noting it's location in the 
-													farm (grid system). I later integrated this onto a drone to carry the mobile and fly around the farm 
-													recognizing tomatoes ready for harvest. 
+													This project was presented at TechCrunch 2020. Integrated an AI onto a rover which 
+													is deployed in a tomato farm scanning plants. Each plant has a profile listing down 
+													details such as count of ripe tomatoes, plant health, infected disease etc. which the 
+													AI detects along with it’s location in the farm. This information is fed onto a DB 
+													everyday along with a farm summary of healthy plants and no. of ready to harvest fruits.
+													I was the lead in this project and responsible for 
+													developing the AI, Integration of the AI onto the rover and Data pipeline flow.
 												</p>
 											</div>
 										</div>
@@ -398,11 +404,15 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0s">
-											<div class="col-sm-3 duration"><span>July 2020 - Aug 2020</span></div>
+											<div class="col-sm-3 duration"><span>July 2020 - Aug 2020 
+												<div><h4> View <a class='liveat' href='https://drive.google.com/file/d/1SWWXVVZBqBzhUKbbGmWb6itXTkS3Ng-W/view?usp=sharing' target="_blank">Certificate</a>
+												</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Backend Developer</span>
-												<span class="job-loc">Mrida, Hyd
-												</span>
+												<span class="job-loc"> 
+													<span class='liveat'>Mrida
+													</span> , Hyd</span>
+												
 												<p class="job-summary p-small">Mrida is an NGO working towards
 													developing rural India and creating VLE's, I had the opportunity to
 													join as an intern and create something useful for them. We made a dynamic data 
@@ -420,10 +430,13 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>June 2020 — July 2020</span></div>
+											<div class="col-sm-3 duration"><span>June 2020 — July 2020 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Analyst</span>
-												<span class="job-loc">Urbankisaan, Hyd
+												<span class="job-loc"><span class='liveat'>Urbankisaan
+												</span> , Hyd
+												</span>
 												</span>
 												<p class="job-summary p-small">
 													This hydroponics start-up grew really fast just like their crops. I
@@ -444,11 +457,13 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
-											<div class="col-sm-3 duration"><span>May 2020 – June 2020</span></div>
+											<div class="col-sm-3 duration"><span>May 2020 – June 2020 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Software Intern
 												</span>
-												<span class="job-loc">Focus Softnet, Hyd
+												<span class="job-loc"><span class='liveat'>Focus Softnet
+												</span> , Hyd
 												</span>
 												<p class="job-summary p-small">
 													Worked along with a college friend under a Project manager in Focus.
@@ -467,36 +482,14 @@
 								</div>
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
-										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
-											<div class="col-sm-3 duration"><span>June 2019 – July 2019</span></div>
-											<div class="col-sm-9">
-												<span class="job-desn">AI Analyst
-												</span>
-												<span class="job-loc">Urbankisaan, Hyd
-												</span>
-												<p class="job-summary p-small">
-													Worked with a team to build a CNN to detect over 15 leaf deseases
-													and pests from a picture taken from a generic mobile phone of the
-													company's crop. I contributed on building the CNN. I gained
-													proffesional experience.
-												</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="row exp-timeline">
-								<div class="col-xs-2">
-									<div class="timeline-st"></div>
-								</div>
-								<div class="col-xs-10 exp-content-wrap">
-									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.6s">
-											<div class="col-sm-3 duration"><span>Jan 2018 – Feb 2018</span></div>
+											<div class="col-sm-3 duration"><span>Aug 2019 – Sept 2018 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Software Intern
 												</span>
-												<span class="job-loc">Graylogic Technologies, Hyd
+												<span class="job-loc"><span class='liveat'>Graylogic Technologies
+												</span> , Hyd
 												</span>
 												<p class="job-summary p-small">As my first proffesional internship I had
 													to make an App.Lead the project of Caper with a team of 5. This App
