--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div><h4> View <a class='liveat' href='#'>Certificate</a>
 											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Developer</span>
@@ -430,7 +430,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>June 2020 — July 2020 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											<div class="col-sm-3 duration"><span>June 2020 — July 2020 <div><h4> View <a class='liveat' href='#'>Certificate</a>
 											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Analyst</span>
@@ -457,7 +457,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
-											<div class="col-sm-3 duration"><span>May 2020 – June 2020 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											<div class="col-sm-3 duration"><span>May 2020 – June 2020 <div><h4> View <a class='liveat' href='#'>Certificate</a>
 											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Software Intern
@@ -483,7 +483,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.6s">
-											<div class="col-sm-3 duration"><span>Aug 2019 – Sept 2018 <div><h4> View <a class='liveat' href='google.com'>Certificate</a>
+											<div class="col-sm-3 duration"><span>Aug 2019 – Sept 2018 <div><h4> View <a class='liveat' href='#'>Certificate</a>
 											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Software Intern
