--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.4s">
-											<div class="col-sm-3 duration"><span>May 2020 – June 2020 <div><h4> View <a class='liveat' href='#'>Certificate</a>
+											<div class="col-sm-3 duration"><span>May 2020 – June 2020 <div><h4> View <a class='liveat' href='https://drive.google.com/file/d/1CBiKhI2eK3aki_wyoCpsnkCk2uQ8vNgT/view?usp=sharing' target='_blank'>Certificate</a>
 											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Software Intern
