--- a/index.html
+++ b/index.html
@@ -266,15 +266,18 @@
 							<ul id="portfolio" class="portf " data-col="2">
 
 								<li class="item" data-src="todsgif.gif"
-									data-sub-html="<h6 >TODS</h6><div><h2>Live at <a class= 'liveat' href='https://www.todsnow.me'>Tods</a></h2><p>Source Code on <a class= 'liveat' href='https://github.com/saakethtypes/Tods'>Git</a></p></div>">
-									<h3>Tods</h3>
-									<h4 class='projectdesc'>A neat looking, customizable To-do
-										app to plan and keep up with your dialy tasks.</h4>
+									data-sub-html="<h6 >URBI</h6><div><h2>Currently live at Urbankisaan's tomato farm</h2><p>Source Code Protected</p></div>">
+									<h3>URBI</h3>
+									<h4 class='projectdesc'>
+										A Rover based intelligence using CNNs to achieve real-time detection 
+										to find more harvestable produce, and detect plant diseases in the farm. URBI the rover
+										roams around the farm and keeps track of every plant. 
+									</h4>
 									<br>
 									<h4 class='liveat'>Expand to vist</h4>
 									<a href="">
 									<img class="img-responsive" src="todsgif.gif" alt="Image description" />
-									<span class="hover-cap">TODS</span>
+									<span class="hover-cap">URBI</span>
 									</a>
 
 								</li>
@@ -311,6 +314,19 @@
 										<span class="hover-cap">MRIDA GROUP</span>
 									</a>
 									
+								</li>
+								<li class="item" data-src="todsgif.gif"
+									data-sub-html="<h6 >TODS</h6><div><h2>Live at <a class= 'liveat' href='https://www.todsnow.me'>Tods</a></h2><p>Source Code on <a class= 'liveat' href='https://github.com/saakethtypes/Tods'>Git</a></p></div>">
+									<h3>Tods</h3>
+									<h4 class='projectdesc'>A neat looking, customizable To-do
+										app to plan and keep up with your dialy tasks.</h4>
+									<br>
+									<h4 class='liveat'>Expand to vist</h4>
+									<a href="">
+									<img class="img-responsive" src="todsgif.gif" alt="Image description" />
+									<span class="hover-cap">TODS</span>
+									</a>
+
 								</li>
 							</ul>
 							<!-- Hidden video div -->
@@ -376,8 +392,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div><h4> View <a class='liveat' href='#'>Certificate</a>
-											</h4></div></span></div>
+											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Developer</span>
 												<span class="job-loc liveat"> <span class='liveat'>Urbankisaan
