--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 						<div class="portfolio-wrap project-gallery padding-sec-lg">
 							<ul id="portfolio" class="portf " data-col="2">
 
-								<li class="item" data-src="urbankisaangif.gif"
+								<li class="item" data-src="https://media.giphy.com/media/gvT9WdrtpPmDSAFAEj/giphy.gif"
 									data-sub-html="<h6 >URBI</h6><div><h2>Currently live at Urbankisaan's tomato farm</h2><p>Source Code Protected</p></div>">
 									<h3>URBI</h3>
 									<h4 class='projectdesc'>
@@ -277,14 +277,15 @@
 									<br>
 									<h4 class='liveat'>Expand to vist</h4>
 									<a href="">
-									<img class="img-responsive" src="urbankisaangif.gif" alt="Image description" />
-									<span class="hover-cap">URBI</span>
+<iframe src="https://giphy.com/embed/gvT9WdrtpPmDSAFAEj" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen style="pointer-events: none;"></iframe><p></p>
+										<span class="hover-cap">URBI</span>
 									</a>
 
 								</li>
 
-								<li class="item" data-src="https://imgur.com/APWFsLr"
+								<li class="item" data-src="https://media.giphy.com/media/anQ88pyVxQyb1MPFDP/giphy.gif"
 									data-sub-html="<h6>ELYWALLS</h6><div><h2>Live at <a class= 'liveat' href='https://www.elywalls.com'>Elywalls</a></h2><p>Source Code on <a class= 'liveat' href='https://github.com/saakethtypes/Elywalls'>Git</a></p></div>">
+								
 									<h3>Elywalls</h3>
 									<h4 class='projectdesc'>
 										A Full fledged E-Commerce website for
@@ -298,7 +299,7 @@ projects. The site is now live and taking orders.
 									<h4 class='liveat'>Expand to vist</h4>
 
 									<a href="">
-										<img class="img-responsive" src="elygif.gif" alt="Image description" />
+										<iframe src="https://giphy.com/embed/anQ88pyVxQyb1MPFDP" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen style="pointer-events: none;"></iframe><p></p>
 										<span class="hover-cap">ELYWALLS</span>
 									</a>
 									
