--- a/index.html
+++ b/index.html
@@ -437,9 +437,9 @@ projects. The site is now live and taking orders.
 													developing rural India and creating VLE's, I had the opportunity to
 													join as an intern and create something useful for them. Along side a fellow intern, 
 													we made a dynamic data 
-													registery tool and managed to make the website ready for proffesional use.  I was 
+													registery tool and managed to make the website ready for professional  use.  I was 
 													responsible for data modeling, API development and the overall workflow.
-													I gained a lot of proffesional work experience and learnt work ethics.</p>
+													I gained a lot of professional  work experience and learnt work ethics.</p>
 											</div>
 										</div>
 									</div>
@@ -464,7 +464,7 @@ projects. The site is now live and taking orders.
 													This hydroponics start-up grew really fast just like their crops. I
 													had the opportunity to perform crop sales prediction using the ARIMA
 													model. Later performed analysis on sales for a bigger company to
-													co-relate their sales with Urbankisaan. I gained proffesional
+													co-relate their sales with Urbankisaan. I gained professional 
 													experience and a liking towards greens and getting healthy.
 												</p>
 											</div>
@@ -491,7 +491,7 @@ projects. The site is now live and taking orders.
 													Worked along with a college friend under a Project manager in Focus.
 													We had to decrypt C struct files coming in real-time live from a
 													server and feed its data to a dashboard. We created the automation
-													scripts and the dashboard. I gained proffesional experience.
+													scripts and the dashboard. I gained professional  experience.
 												</p>
 											</div>
 										</div>
@@ -513,7 +513,7 @@ projects. The site is now live and taking orders.
 												<span class="job-loc"><span class='liveat'>Graylogic Technologies
 												</span> , Hyd
 												</span>
-												<p class="job-summary p-small">As my first proffesional internship I had
+												<p class="job-summary p-small">As my first professional  internship I had
 													to make an App.Lead the project of Caper with a team of 5. This App
 													is made for sports enthusiasts to help find a partner using GPS in a
 													particular sport, matching their skill level. I developed the
