--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ projects. The site is now live and taking orders.
 									data-sub-html="<h6>MRIDA</h6><div><div><h2>Live at <a class= 'liveat' href='https://www.mridasdgtool.com'>Mrida</a></p><p>Source Code Protected</div>">
 									<h3>Mrida</h3>
 									
-									<h4 class='projectdesc'>Built a dynamic data registery
+									<h4 class='projectdesc'>Built a dynamic data registry 
 										website for field agents across rural India. </h4>
 
 <br>
@@ -437,7 +437,7 @@ projects. The site is now live and taking orders.
 													developing rural India and creating VLE's, I had the opportunity to
 													join as an intern and create something useful for them. Along side a fellow intern, 
 													we made a dynamic data 
-													registery tool and managed to make the website ready for professional  use.  I was 
+													registry  tool and managed to make the website ready for professional  use.  I was 
 													responsible for data modeling, API development and the overall workflow.
 													I gained a lot of professional  work experience and learnt work ethics.</p>
 											</div>
