--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ projects. The site is now live and taking orders.
 									
 								</li>
 								<li class="item" data-src="mridagif.gif"
-									data-sub-html="<h6>MRIDA</h6><div><div><h2>Live at <a class= 'liveat' href='https://www.mridasdgtool.com'>Mrida</a></p><p>Source Code Protected</div>">
+									data-sub-html="<h6>MRIDA</h6><div><div><h2>Live at <a class= 'liveat' href='https://mridasdgtool.com'>Mrida</a></p><p>Source Code Protected</div>">
 									<h3>Mrida</h3>
 									
 									<h4 class='projectdesc'>Built a dynamic data registry 
