--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
 						</p>
 						<p class="wow fadeInUp" data-wow-duration=".4s">
 							Find my work on <a class="goto-social" href="https://github.com/saakethtypes"
-								target="_blank">Github</a>. Experience my photography skills on <a
+								target="_blank">Github</a> and 
+								<a class="goto-social" href="https://www.linkedin.com/in/saaketh-ch-9b879417a/"
+								target="_blank"> LinkedIn </a>
+								. Experience my photography skills on <a
 								href="https://instagram.com/saaketh89" class="goto-social"
 								target="_blank">Instagram</a>.
 							Developer and owner of <a class="goto-social" href="https://www.elywalls.com"
