--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 
 					<section id="contact_sec" class="col-lg-10 col-md-11 col-sm-11 center-div contact-wrap sec-pad">
 						<h6>contact</h6>
-
+						<a href='gg.html'>WORKS</a>
 						<div class="email-direct">
 							<p class="wow fadeInRight" data-wow-duration=".4s">Simply email me at <a
 									href="mailto:saakethlogs@gmail.com">saakethlogs@gmail.com</a> 
