--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</a>
 						</div>
 						<div class="float-right social-download-wrap">
-							<a href="RESUME2020.pdf" class="btn btn-default float-left" download>
+							<a href="SaakethCh_Resume_Sep2020.pdf" class="btn btn-default float-left" download>
 								<span class="mask"></span>
 								<span class="btn-label">
 									<b>download resume</b>
@@ -534,7 +534,6 @@
 
 					<section id="contact_sec" class="col-lg-10 col-md-11 col-sm-11 center-div contact-wrap sec-pad">
 						<h6>contact</h6>
-						<a href='gg.html'>WORKS</a>
 						<div class="email-direct">
 							<p class="wow fadeInRight" data-wow-duration=".4s">Simply email me at <a
 									href="mailto:saakethlogs@gmail.com">saakethlogs@gmail.com</a> 
