--- a/index.html
+++ b/index.html
@@ -400,7 +400,10 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div></div></span></div>
+											<div class="col-sm-3 duration"><span>Aug 2020 — Oct 2020 <div>
+												<h4> View <a class='liveat' href='https://drive.google.com/file/d/1CtlVgaR6uqB06dmcLJHovOKx0-2kBTdR/view?usp=sharing'>Certificate</a>
+
+											</div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Developer</span>
 												<span class="job-loc liveat"> <span class='liveat'>Urbankisaan
@@ -455,7 +458,8 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>June 2020 — July 2020 <div><h4> View <a class='liveat' href='#'>Certificate</a>
+											<div class="col-sm-3 duration"><span>June 2020 — July 2020 <div>
+												<h4> View <a class='liveat' href='https://drive.google.com/file/d/1CtlVgaR6uqB06dmcLJHovOKx0-2kBTdR/view?usp=sharing'>Certificate</a>
 											</h4></div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">AI Analyst</span>
