--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 									</a>
 									
 								</li>
-								<li class="item" data-src="https://media1.giphy.com/media/pxFpMwIskRqvXjDDDe/giphy.gif"
+								<li class="item" data-src="https://user-images.githubusercontent.com/47172497/115061452-d1002580-9f06-11eb-970a-606f9c7f59f5.gif"
 									data-sub-html="<h6 >TODS</h6><div><h3>Live at <a class= 'liveat' href='https://todsapp.herokuapp.com/'>Todsapp</a></h3><p>Source Code on <a class= 'liveat' href='https://github.com/saakethtypes/Tods'>Git</a></p></div>">
 									<h3>Tods</h3>
 									<h4 class='projectdesc'>A neat looking, customizable To-do
@@ -306,7 +306,7 @@
 									<br>
 									<h4 class='liveat'>Expand to vist</h4>
 									<a href="">
-										<iframe src="https://giphy.com/embed/pxFpMwIskRqvXjDDDe" width="480" height="400"  class="giphy-embed" allowFullScreen style="pointer-events: none;"></iframe>
+										<iframe src="https://user-images.githubusercontent.com/47172497/115061452-d1002580-9f06-11eb-970a-606f9c7f59f5.gif" width="480" height="400"  class="giphy-embed" allowFullScreen style="pointer-events: none;"></iframe>
 										<span class="hover-cap">TODS</span></a>
 									</a>
 
