--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 									<br>
 									<h4 class='liveat'>Expand to vist</h4>
 									<a href="">
-										<iframe src="https://s4.gifyu.com/images/tods.gif" width="480" height="400"  class="giphy-embed" allowFullScreen style="pointer-events: none;"></iframe>
+										<img src="https://s4.gifyu.com/images/tods.gif" width="480" height="400"  style="pointer-events: none;"></img>
 										<span class="hover-cap">TODS</span></a>
 									</a>
 
@@ -314,7 +314,35 @@
 							</ul>
 
 							<br>
-							
+							<br>
+							<h6> &nbsp;Github Collections</h6>
+						<div class="row">	
+							<!-- <div class=" float-left  ">
+								<b>&nbsp;&nbsp;&nbsp;&nbsp;
+									&nbsp;&nbsp;</b>
+							</div>
+							<div class=" float-left  mr-1 social-download-wrap">
+								<a href="" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b>CORE AI</b>
+									</span>
+								</a>
+							</div> -->
+							<div class=" float-left  ">
+										<b>&nbsp;&nbsp;&nbsp;</b>
+							</div>
+							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/Compi" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> Comp Coding </b>
+									</span>
+								</a>
+							</div>
+						</div>
 						</div>
 							<div style="display:none;" id="video1">
 								<video class="lg-video-object lg-html5 video-js vjs-default-skin" controls
