--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Feb 2021 - Current<span style='color:#6bf394'>
+											<div class="col-sm-3 duration"><span>Feb 2021 - Apr 2021<span style='color:#6bf394'>
 												<!-- <h4> View <a class='liveat' href='https://drive.google.com/file/d/1CtlVgaR6uqB06dmcLJHovOKx0-2kBTdR/view?usp=sharing' target='_blank' >Certificate</a> -->
 												</h4></span> <div>
 
