--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
 						class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
 						<h6>technical skills</h6>
 						<p class="wow fadeInUp" data-wow-duration=".4s">I'm a 21 year old student from MU, Hyd currently
-							persuing my Mechanical degree.
+							pursuing my Mechanical degree.
 							Half way into
 							sophomore year
 							I started learning code because of a C programming workshop in my college. I got everything
 							on my first try
 							and that never happened before. Got excited whenever I saw the output in the terminal. I
 							fell in love with
-							the idea of instuctions and computation. Eventually I started solving tougher puzzles on
+							the idea of instructions and computation. Eventually I started solving tougher puzzles on
 							codeforces, hackerrank and gained confidence.
 							Programming became my full time thing. Taught myself Full stack and AI.
 							By the end of fifth semester I was fluent with my skills. After too much coffee and typing I
