Added OTSI cert

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 								<h3>Elywalls</h3>
 								<h4 class='projectdesc'>
 									A Full fledged E-Commerce website for
-									artists and photgraphers to sell their
+									artists and photographers to sell their
 									work. I set this up as a start up in Sep `20.
 									This is easily one of my biggest
 									projects.  While building the company I learnt the 
