--- a/index.html
+++ b/index.html
@@ -392,6 +392,33 @@
 					<section id="exp_sec" class="col-lg-10 col-md-11 col-sm-11 center-div experience-wrap  sec-pad">
 						<h6>experience</h6>
 						<div class="exp-timeline-wrap">
+
+							<div class="row exp-timeline ">
+								<div class="col-xs-2">
+									<div class="timeline-st"></div>
+								</div>
+								<div class="col-xs-10 exp-content-wrap">
+									<div class="row">
+										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
+											<div class="col-sm-3 duration"><span>Feb 2021 - Apr 2021<span style='color:#6bf394'>
+												<h4> View <a class='liveat' href='https://drive.google.com/file/d/1jNT2to8E1TOlDd2xzn3fsiJsGD7aS6en/view?usp=sharing' target='_blank' >Certificate</a>
+												</h4></span> <div>
+
+											</div></span></div>
+											<div class="col-sm-9">
+												<span class="job-desn">Full Stack Engineer</span>
+												<span class="job-loc liveat"> <a href="https://www.otsi.co.in/" class='liveat'>Moving
+												</a> , Delhi
+												</span>
+												<p class="job-summary p-small">
+													
+												</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+
 							<div class="row exp-timeline ">
 								<div class="col-xs-2">
 									<div class="timeline-st"></div>
