--- a/index.html
+++ b/index.html
@@ -400,14 +400,13 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Feb 2021 - Apr 2021<span style='color:#6bf394'>
-												<h4> View <a class='liveat' href='https://drive.google.com/file/d/1jNT2to8E1TOlDd2xzn3fsiJsGD7aS6en/view?usp=sharing' target='_blank' >Certificate</a>
+											<div class="col-sm-3 duration"><span>May 2021 - Current<span style='color:#6bf394'>
 												</h4></span> <div>
 
 											</div></span></div>
 											<div class="col-sm-9">
 												<span class="job-desn">Full Stack Engineer</span>
-												<span class="job-loc liveat"> <a href="https://www.otsi.co.in/" class='liveat'>Moving
+												<span class="job-loc liveat"> <a href="https://www.moving.so/" class='liveat'>Moving
 												</a> , Delhi
 												</span>
 												<p class="job-summary p-small">
