--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
 												</a> , Delhi
 												</span>
 												<p class="job-summary p-small">
-													
+													Working full time with Moving. Moving is a start up focused on socializing
+													crypto trading and providing curated content on the latest updates with the 
+													crypto market. I am responsible for the app's backend logic and API creations.
 												</p>
 											</div>
 										</div>
