--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 							about
 						</h6>
 						<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-							The very idea of coming up with rules that a certain nobody can follow
-							is some sort of a universal language and the purest form of logic.
+							The concept of coming up with rules that an unconscious thing made with steel can follow
+							is some sort of an universal language and the purest form of logic.
 						</p><p class="wow fadeInUp">
 							I'm good with faces and we'd have a nice conversation if we could connect on
 							Films, Music and Michael Scott.
