Added exp and education

--- a/index.html
+++ b/index.html
@@ -102,10 +102,9 @@
 							about
 						</h6>
 						<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-							The concept of coming up with rules that an unconscious thing made with steel can follow
-							is some sort of an universal language and the purest form of logic.
+							Comp coding and RL addict.
 						</p><p class="wow fadeInUp">
-							I'm good with faces and we'd have a nice conversation if we could connect on
+							We'd have a nice conversation if we could connect on
 							Films, Music and Michael Scott.
 						</p>
 						<p class="wow fadeInUp" data-wow-duration=".4s">
@@ -116,7 +115,7 @@
 								 Experience my photography skills on <a
 								href="https://instagram.com/saaketh89" class="goto-social"
 								target="_blank" rel="noopener noreferrer" >Instagram</a>.
-							    I stream a ton of live coding and gaming on my <a
+							    I do live coding on <a
 								href="https://www.twitch.tv/saaketh56" class="goto-social"
 								target="_blank" rel="noopener noreferrer" >Twitch</a>.
 								 Let's talk while gaming, here's my <a
@@ -173,7 +172,7 @@
 					<section id="skill_sec"
 						class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
 						<h6>technical skills</h6>
-						<p class="wow fadeInUp" data-wow-duration=".4s">I'm a 21 year old student from Hyd,India.
+						<p class="wow fadeInUp" data-wow-duration=".4s">
 							Half way into
 							sophomore year
 							I started learning code because of a C programming workshop in my college. I got everything
@@ -357,6 +356,19 @@
 						<div class="qualfication-wrap">
 							<div class="qualfication first-row wow fadeInUp" data-wow-duration=".4s">
 								<div class="col-sm-2">
+									<span class="yr-pers vertical-align-pad">2022-2024</span>
+								</div>
+								<div class="col-sm-5">
+									<span class="insti vertical-align-pad">Northeastern University, Boston</span>
+								</div>
+								<div class="col-sm-3">
+									<span class="design vertical-align-pad">
+										Masters in Information Systems.
+									</span>
+								</div>
+							</div>
+							<div class="qualfication first-row wow fadeInUp" data-wow-duration=".4s">
+								<div class="col-sm-2">
 									<span class="yr-pers vertical-align-pad">2017-2021</span>
 								</div>
 								<div class="col-sm-5">
@@ -391,6 +403,33 @@
 					<section id="exp_sec" class="col-lg-10 col-md-11 col-sm-11 center-div experience-wrap  sec-pad">
 						<h6>experience</h6>
 						<div class="exp-timeline-wrap">
+							<div class="row exp-timeline ">
+								<div class="col-xs-2">
+									<div class="timeline-st"></div>
+								</div>
+								<div class="col-xs-10 exp-content-wrap">
+									<div class="row">
+										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
+											<div class="col-sm-3 duration"><span>April 2022 - Current<span style='color:#6bf394'>
+												</h4></span> <div>
+
+											</div></span></div>
+											<div class="col-sm-9">
+												<span class="job-desn">Backend Engineer</span>
+												<span class="job-loc liveat"> <a href="https://www.plug.money/" class='liveat'>Plug
+												</a> , Delhi
+												</span>
+												<p class="job-summary p-small">
+													Plug is a start up focused on Binary trading options and creating a eco system of curators posting 
+													events on which their followers can trade upon. I was the lead for the app's 
+													backend APIs and database architecture. 
+													The company has finished it's seed round of funding and is ready for it's launch.
+												</p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 
 							<div class="row exp-timeline ">
 								<div class="col-xs-2">
@@ -399,19 +438,20 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>May 2021 - Current<span style='color:#6bf394'>
+											<div class="col-sm-3 duration"><span>May 2021 - April 2022<span style='color:#6bf394'>
 												</h4></span> <div>
 
 											</div></span></div>
 											<div class="col-sm-9">
-												<span class="job-desn">Full Stack Engineer</span>
+												<span class="job-desn">Backend Engineer</span>
 												<span class="job-loc liveat"> <a href="https://www.moving.so/" class='liveat'>Moving
 												</a> , Delhi
 												</span>
 												<p class="job-summary p-small">
-													Working full time with Moving. Moving is a start up focused on socializing
+													Moving is a start up focused on socializing
 													crypto trading and providing curated content on the latest updates with the 
-													crypto market. I am responsible for the app's backend logic and API creations.
+													crypto market. I was responsible for the app's backend logic and database architecture. 
+													The app scaled upto 30k+ users overnight.
 												</p>
 											</div>
 										</div>
