--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							</a>
 						</div>
 						<div class="float-right social-download-wrap">
-						<a href="Resume_Saaketh.pdf" class="btn btn-default float-left" download>
+						<a href="Resume711.pdf" class="btn btn-default float-left" download>
 								<span class="mask"></span>
 								<span class="btn-label">
 									<b>download resume</b>
@@ -476,7 +476,7 @@
 								<div class="col-xs-10 exp-content-wrap">
 									<div class="row">
 										<div class="wow fadeInRight" data-wow-duration=".4s" data-wow-delay="0.2s">
-											<div class="col-sm-3 duration"><span>Feb 2021 - Apr 2021<span style='color:#6bf394'>
+											<div class="col-sm-3 duration"><span>Apr 2020 - Sep 2020<span style='color:#6bf394'>
 												<!-- <h4> View <a class='liveat' href='https://drive.google.com/file/d/1jNT2to8E1TOlDd2xzn3fsiJsGD7aS6en/view?usp=sharing' target='_blank' >Certificate</a> -->
 												</h4></span> <div>
 
@@ -487,9 +487,8 @@
 												</a> , Hyd
 												</span>
 												<p class="job-summary p-small">
-													Learnt Professional Machine learning lifecycles and code management 
-													ethics. Worked on a project in which I built and deployed an object detection 
-													model using PyTorch and Flask.
+													Deployed a robust face recognition OpenCV model for a facial attendance system at scale with a team employing professional ML
+lifecycles and developing 8+ SQL stored procedures, successfully prototyping within the company for 200+ employee registers
 												</p>
 											</div>
 										</div>
@@ -593,7 +592,7 @@
 					<section id="contact_sec" class="col-lg-10 col-md-11 col-sm-11 center-div contact-wrap sec-pad">
 						<h6>contact</h6>
 						<div class="email-direct">
-							<p class="wow fadeInRight" data-wow-duration=".4s">Simply email me at 
+							<p class="wow fadeInRight" data-wow-duration=".4s">Mail @ saakethlogs@gmail.com | 
 									<a
 									href="mailto:chaganty.s@northeastern.edu">chaganty.s@northeastern.edu</a>
 								</p>
