--- a/index.html
+++ b/index.html
@@ -110,17 +110,12 @@
 						<p class="wow fadeInUp" data-wow-duration=".4s">
 							Find my work on <a class="goto-social" href="https://github.com/saakethtypes"
 								target="_blank" rel="noopener noreferrer" >Github</a> and 
-								<a class="goto-social" href="https://www.linkedin.com/in/saaketh-ch-9b879417a/"
+								<a class="goto-social" href="https://www.linkedin.com/in/saakethchaganty/"
 								target="_blank" rel="noopener noreferrer" > LinkedIn</a>.
 								 Experience my photography skills on <a
 								href="https://instagram.com/saaketh89" class="goto-social"
 								target="_blank" rel="noopener noreferrer" >Instagram</a>.
-							    I do live coding on <a
-								href="https://www.twitch.tv/saaketh56" class="goto-social"
-								target="_blank" rel="noopener noreferrer" >Twitch</a>.
-								 Let's talk while gaming, here's my <a
-								href="./discordId.txt" class="goto-social"
-								target="_blank" rel="noopener noreferrer" >Discord</a>.
+							   
 								
 						</p>
 					</section>
