--- a/index.html
+++ b/index.html
@@ -316,6 +316,16 @@
 								</a>
 							</div>
 							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/Core-AI.git" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> Deep Learning collection </b>
+									</span>
+								</a>
+							</div>
+						</div>
+							<div class=" float-left mr-1 social-download-wrap">
 								<a href="https://github.com/saakethtypes/Real-Time-Model-Inference" class="btn btn-default float-left" 
 								target="_blank" rel="noopener noreferrer">
 									<span class="mask"></span>
@@ -342,7 +352,51 @@
 									</span>
 								</a>
 							</div>
-						</div>
+							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/MultiModal-LakeEffect-Detection.git" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> CNN LSTM for Weather Prediction </b>
+									</span>
+								</a>
+							</div>
+							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/AI-Powered-Social-Platform.git" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> Social Ad Targeting with LLMs</b>
+									</span>
+								</a>
+							</div>
+							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/Visual-Vector-Search.git" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> Reverse Image Search </b>
+									</span>
+								</a>
+							</div>
+							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/paraphrase-plagiarism.git" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> Plaigarism Detection </b>
+									</span>
+								</a>
+							</div>
+							<div class=" float-left mr-1 social-download-wrap">
+								<a href="https://github.com/saakethtypes/crewai-sql" class="btn btn-default float-left" 
+								target="_blank" rel="noopener noreferrer">
+									<span class="mask"></span>
+									<span class="btn-label">
+										<b> LLM Agent Crew </b>
+									</span>
+								</a>
+							</div>
 							<div style="display:none;" id="video1">
 								<video class="lg-video-object lg-html5 video-js vjs-default-skin" controls
 									preload="none">
